--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Belen Vasquez
 logo: /Users/mbvc/Desktop/Screen Shot 2023-06-30 at 11.36.19 AM.png
 #description: text below image
 show_downloads: true
-them: jekyll-theme-minimal
+theme: jekyll-theme-minimal
