--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Belen Vasquez
-logo: /Users/mbvc/Desktop/Screen Shot 2023-06-30 at 11.36.19 AM.png
+logo: assets/Maria Belen Vasquez-01.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
