--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Belen Vasquez
-logo: /assets/Maria Belen Vasquez-01.png
+logo: /assets/logo.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
