--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Maria Belen Vasquez
 logo: /assets/logo.png
 #description: text below image
-show_downloads: true
+#how_downloads: 
 theme: jekyll-theme-minimal
