--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Maria Belen Vasquez
 logo: /assets/logo.png
-#description: text below image
+#description: Technical Skills: GIS, SQL, R, AutoCAD, Adobe Illustrator
 show_downloads: false
 theme: jekyll-theme-minimal
